# elixir-arrow

./: .gitignore  .iex.exs  README.md  mix.exs
lib/: array.ex  arrow.ex  datafusion.ex  field.ex  parquet.ex  record_batch.ex  schema.ex  table.ex  type.ex
lib/arrow/: array.ex  conversion.ex  datafusion.ex  native.ex  parquet.ex  record_batch.ex  schema.ex  type.ex
lib/arrow/compute/: arithmetic.ex  comparison.ex  length.ex
lib/arrow/datafusion/: execution_context.ex
lib/arrow/parquet/: file.ex  reader.ex
lib/datafusion/: execution_context.ex
lib/parquet/: file.ex  reader.ex
native/: .gitignore
native/arrow_nif/: Cargo.toml  README.md
native/arrow_nif/src/: array.rs  datafusion.rs  datafusion_nif.rs  datatype.rs  field.rs  lib.rs  parquet.rs  parquet_ex.rs  record_batch.rs  schema.rs  table.rs
native/arrow_nif/src/compute/: aggregate.rs  arithmetic.rs  comparison.rs  length.rs  mod.rs
test/: arrow_array_test.exs  arrow_test.exs  datafusion_test.exs  parquet_test.exs
test/arrow/: compute_test.exs
test/data/: dataframe.csv  dataframe.parquet
test/parquet/: parquet_file_test.exs
