[package]
name = "arrow_nif"
version = "0.1.0"
authors = ["Patrick Mühlbauer <pm.muehlbauer@googlemail.com>"]
edition = "2018"

[lib]
name = "arrow_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0-rc.0"
arrow = { version = "4.0.0-SNAPSHOT", rev = "51c97799b8302466b9dfbb657dc23fd3f0cd8e61", git = "https://github.com/apache/arrow" }
parquet = { version = "4.0.0-SNAPSHOT", rev = "51c97799b8302466b9dfbb657dc23fd3f0cd8e61", git = "https://github.com/apache/arrow" }
datafusion = { version = "4.0.0-SNAPSHOT", rev = "51c97799b8302466b9dfbb657dc23fd3f0cd8e61", git = "https://github.com/apache/arrow" }
tokio = { version = "1.4.0", features = ["rt"] }
