[package]
name = "arrow_nif"
version = "0.2.0"
authors = [
    "Patrick Mühlbauer <pm.muehlbauer@googlemail.com>",
    "Istvan Szukacs <istvan@datadeft.eu>",
]
edition = "2018"

[lib]
name = "arrow_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0"
arrow = "48.0.0"
parquet = "48.0.0"
datafusion = "32.0.0"
tokio = { version = "1.4.0", features = ["rt"] }
